--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
+    "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "repository": {
+    "url": "git+https://github.com/gabrielemarchetti00/battleship.git"
+  },
+  "homepage": "http://gabrielemarchetti00.github.io/battleship"
 }
